--- a/week1/day2/index.html
+++ b/week1/day2/index.html
@@ -7,81 +7,30 @@
   <title>shopping</title>
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles/style.css" />
   <script src="https://kit.fontawesome.com/ae1d3a79b9.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <nav>
-    <i class="fas fa-guitar fa-2x"></i>
     <ul>
-      <li><a href="signup.html">signup</a></li>
-      <li><a href="login.html">login</a></li>
-      <li><a class="active" href="index.html">products</a></li>
+      <li id="logo"><a class="active" href="index.html"> <i class="fas fa-guitar fa-2x"></i></a></li>
+      <li><a href="pages/signup.html">signup</a></li>
+      <li><a href="pages/login.html">login</a></li>
+      <li><a href="pages/products.html">products</a></li>
     </ul>
   </nav>
 
 
+  <!-- landing -->
 
-  <div class="row">
-    <div class="item"> <img src="assets/1.jpg" alt="item1" />
-      <p>guitar white classic</p>
-      <p>300 $</p>
-      <button>Add +</button>
-    </div>
-
-    <div class="item"> <img src="assets/2.jpg" alt="item1" />
-      <p>guitar white classic</p>
-      <p>300 $</p>
-      <button>Add +</button>
-    </div>
-
-    <div class="item"> <img src="assets/3.jpg" alt="item1" />
-      <p>guitar white classic</p>
-      <p>300 $</p>
-      <button>Add +</button>
-    </div>
+  <div class="landing">
+    <h1>MyGuitars</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam architecto suscipit nihil impedit! Animi tenetur
+      beatae et ipsa doloremque est harum laboriosam, cumque repellendus maiores qui, porro quae officia culpa.</p>
   </div>
-  <br>
-  <div class="row">
-    <div class="item"> <img src="assets/4.jpg" alt="item1" />
-      <p>guitar white classic</p>
-      <p>300 $</p>
-      <button>Add +</button>
-    </div>
 
-    <div class="item"> <img src="assets/5.jpg" alt="item1" />
-      <p>guitar white classic</p>
-      <p>300 $</p>
-      <button>Add +</button>
-    </div>
 
-    <div class="item"> <img src="assets/6.jpg" alt="item1" />
-      <p>guitar white classic</p>
-      <p>300 $</p>
-      <button>Add +</button>
-    </div>
-  </div>
-  <br>
-  <div class="row">
-    <div class="item"> <img src="assets/7.jpg" alt="item1" />
-      <p>guitar white classic</p>
-      <p>300 $</p>
-      <button>Add +</button>
-    </div>
-
-    <div class="item"> <img src="assets/8.jpg" alt="item1" />
-      <p>guitar white classic</p>
-      <p>300 $</p>
-      <button>Add +</button>
-    </div>
-
-    <div class="item"> <img src="assets/9.jpg" alt="item1" />
-      <p>guitar white classic</p>
-      <p>300 $</p>
-      <button>Add +</button>
-    </div>
-  </div>
   <footer>Tomer Noy 2021</footer>
 </body>
 
