week1 day2 edit

--- a/week1/day2/pages/signup.html
+++ b/week1/day2/pages/signup.html
@@ -8,6 +8,7 @@
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="../styles/style.css" />
+  <link rel="stylesheet" href="../styles/login-signup.css" />
   <script src="https://kit.fontawesome.com/ae1d3a79b9.js" crossorigin="anonymous"></script>
 </head>
 
@@ -21,7 +22,28 @@
     </ul>
   </nav>
 
+  <form>
+    <label for="firstname">Firstname: </label>
+    <input type="text" id="firstname" name="firstname"><br>
+
+    <label for="lastname">Lastname: </label>
+    <input type="text" id="lastname" name="lastname"><br>
+
+    <label for="username">Username: </label>
+    <input type="text" id="username" name="username"><br>
+
+    <label for="email">Email: </label>
+    <input type="email" id="email" name="email"><br>
+
+    <label for="password">Password: </label>
+    <input type="password" id="password" name="password"><br>
+
+    <input id="submit" type="submit" value="Submit">
+  </form>
+
   <footer>Tomer Noy 2021</footer>
 </body>
 
 </html>
+
+<!-- firstname, lastname, username, email and password.-->
