--- a/week1/day2/pages/products.html
+++ b/week1/day2/pages/products.html
@@ -26,20 +26,20 @@
   <!-- products -->
   <div class="row">
     <div class="item"> <img src="../assets/1.jpg" alt="item1" />
-      <p>guitar white classic</p>
+      <p>guitar brown classic</p>
       <p>300 $</p>
       <button>Add +</button>
     </div>
 
     <div class="item"> <img src="../assets/2.jpg" alt="item1" />
       <p>guitar white classic</p>
-      <p>300 $</p>
+      <p>400 $</p>
       <button>Add +</button>
     </div>
 
     <div class="item"> <img src="../assets/3.jpg" alt="item1" />
-      <p>guitar white classic</p>
-      <p>300 $</p>
+      <p>guitar brown classic</p>
+      <p>600 $</p>
       <button>Add +</button>
     </div>
   </div>
@@ -47,19 +47,19 @@
   <div class="row">
     <div class="item"> <img src="../assets/4.jpg" alt="item1" />
       <p>guitar white classic</p>
-      <p>300 $</p>
+      <p>400 $</p>
       <button>Add +</button>
     </div>
 
     <div class="item"> <img src="../assets/5.jpg" alt="item1" />
       <p>guitar white classic</p>
-      <p>300 $</p>
+      <p>100 $</p>
       <button>Add +</button>
     </div>
 
     <div class="item"> <img src="../assets/6.jpg" alt="item1" />
-      <p>guitar white classic</p>
-      <p>300 $</p>
+      <p>guitar red classic</p>
+      <p>700 $</p>
       <button>Add +</button>
     </div>
   </div>
@@ -67,18 +67,18 @@
   <div class="row">
     <div class="item"> <img src="../assets/7.jpg" alt="item1" />
       <p>guitar white classic</p>
-      <p>300 $</p>
+      <p>900 $</p>
       <button>Add +</button>
     </div>
 
     <div class="item"> <img src="../assets/8.jpg" alt="item1" />
-      <p>guitar white classic</p>
-      <p>300 $</p>
+      <p>guitar brown classic</p>
+      <p>500 $</p>
       <button>Add +</button>
     </div>
 
     <div class="item"> <img src="../assets/9.jpg" alt="item1" />
-      <p>guitar white classic</p>
+      <p>guitar black classic</p>
       <p>300 $</p>
       <button>Add +</button>
     </div>
