--- a/week1/day3/cv/index.html
+++ b/week1/day3/cv/index.html
@@ -26,7 +26,7 @@
     <div class="title">
         <h1>TOMER NOY</h1>
         <br>
-        <p> <span>Address</span> | Petach Tikva, Israerl</p>
+        <p> <span>Location</span> Petach Tikva, Israerl</p>
 
     </div>
     <div class="stack">
@@ -40,12 +40,52 @@
     <div class="contact">
         <h1>CONTACT</h1>
         <hr>
-        
+        <div class="contactRow">
+            <p>Mobile</p>
+            <a href="">+972 5488 5959 6</a>
+            <i class="fas fa-phone"></i>
+        </div>
+        <div class="contactRow">
+            <p>Email</p>
+            <a href="">TomerNoy@outlook.com</a>
+            <i class="fas fa-envelope"></i>
+        </div>
+
+        <div class="social">
+            <button><i class="fab fa-linkedin-in"></i></button>
+            <button><i class="fab fa-github-alt"></i></button>
+            <button><i class="fab fa-twitter"></i></button>
+        </div>
+
+
+
 
     </div>
     <div class="exp">
-        <h1>PROFFESIONAL EXPERIENCE</h1>
+        <h1>EXPERIENCE</h1>
         <hr>
+        <br>
+        <h2>Mobile Application Developer</h2>
+
+        <h5>Feb 2018 - Presen</h5>
+        <br>
+        <p>DiamNet is a built from scratch full-stack cross-platform mobile app for the Diamond trading industry.</p>
+        <br>
+        <p> Main features:</p>
+        <ul>
+            <li>Accounts management with SMS auth, JWT, hashing, encryption algorithm</li>
+            <li>Data cache management and storage via key-value pairs and server side on a MongoDB shell. • SSL, load
+            </li>
+            <li>Data cache management and storage via key-value pairs and server side on a MongoDB shell. • SSL, load
+                balancer, reversed proxies, websockets</li>
+            <li>Dynamic interactive UI with search functions on hashes object sets</li>
+            <li>Objects upload from external file to UI and onto mongo shell on server dynamically</li>
+            <li>In app live chat with files/images transfer and push notifications</li>.
+        </ul>
+        <br>
+        <p>Mainly coded with Dart/Flutter, NodeJS, MongoDB, Linux, NGINX</p>
+        <p>Preview at <a href="https://diamnet.vip">https://diamnet.vip</a> </p>
+
 
     </div>
     <div class="education">
