--- a/week1/day3/cv/index.html
+++ b/week1/day3/cv/index.html
@@ -42,19 +42,24 @@
         <hr>
         <div class="contactRow">
             <p>Mobile</p>
-            <a href="">+972 5488 5959 6</a>
+            <a href="tel:00972548859596">+972 5488 5959 6</a>
             <i class="fas fa-phone"></i>
         </div>
         <div class="contactRow">
             <p>Email</p>
-            <a href="">TomerNoy@outlook.com</a>
+            <a href="mailto:tomernoy@outlook.com">TomerNoy@outlook.com</a>
             <i class="fas fa-envelope"></i>
         </div>
 
         <div class="social">
-            <button><i class="fab fa-linkedin-in"></i></button>
-            <button><i class="fab fa-github-alt"></i></button>
-            <button><i class="fab fa-twitter"></i></button>
+            <a href="https://www.linkedin.com/in/tomer-noy-b09966203/" target="_blank">
+                <button><i class="fab fa-linkedin-in"></i></button></a>
+            <a href="https://github.com/TomerNoy" target="_blank">
+                <button><i class="fab fa-github-alt"></i></button></a>
+            <a href="https://twitter.com/tom41712288" target="_blank">
+                <button><i class="fab fa-twitter"></i></button>
+            </a>
+
         </div>
 
 
