--- a/week1/day3/cv/index.html
+++ b/week1/day3/cv/index.html
@@ -25,7 +25,7 @@
       <div class="pic"></div>
       <div class="title">
         <h1>TOMER NOY</h1>
-        <br />
+        <!-- <br /> -->
         <p><span>Location</span> Petach Tikva, Israel</p>
       </div>
       <!-- <div class="stack">
@@ -52,6 +52,7 @@
         </p>
         <br />
         <p>Main features:</p>
+        <br />
         <ul>
           <li>
             Accounts management with SMS auth, JWT, hashing, encryption
@@ -59,13 +60,10 @@
           </li>
           <li>
             Data cache management and storage via key-value pairs and server
-            side on a MongoDB shell. • SSL, load
+            side on a MongoDB shell
           </li>
-          <li>
-            Data cache management and storage via key-value pairs and server
-            side on a MongoDB shell. • SSL, load balancer, reversed proxies,
-            websockets
-          </li>
+          <li>SSL, load balancer, reversed proxies, websockets.</li>
+
           <li>
             Dynamic interactive UI with search functions on hashes object sets
           </li>
@@ -113,7 +111,7 @@
         <br />
         <h3>Translator at Embassy of P.R.China</h3>
         <h5>2009 - 2011</h5>
-
+        <br />
         <ul>
           <li>Dealing with crowd of people in stressed situations</li>
           <li>Solving international problems for visa applicants</li>
@@ -166,7 +164,6 @@
           <p>Guangxi University Chinese Studies 2004 广西大学</p>
           <br />
           <p>Yuxi Normal University 2004 玉溪师范大学</p>
-          
         </div>
 
         <!-- LANGUAGES -->
