added first landing page

--- a/week1/day3/first-landing-page/index.html
+++ b/week1/day3/first-landing-page/index.html
@@ -47,7 +47,7 @@
           
         </div>
         <div class="bottom">
-          <h3 id="name">Ruth Davidson</h3>
+          <h3 id="name">Lorem, ipsum dolor</h3>
           <p id="description">Designer, US</p>
         </div>
       </div>
@@ -63,8 +63,8 @@
             <i class="fas fa-user-circle"></i>
         </div>
         <div class="bottom">
-          <h3 id="name">Ruth Davidson</h3>
-          <p id="description">Designer, US</p>
+          <h3 id="name">Lorem, ipsum</h3>
+          <p id="description">Founder, US</p>
         </div>
       </div>
       <div class="card3">
@@ -79,8 +79,8 @@
             <i class="fas fa-user-circle"></i>
         </div>
         <div class="bottom">
-          <h3 id="name">Ruth Davidson</h3>
-          <p id="description">Designer, US</p>
+          <h3 id="name">Lorem, ipsum</h3>
+          <p id="description">Founder, US</p>
         </div>
       </div>
     </div>
