--- a/week1/day3/second-landing-page/index.html
+++ b/week1/day3/second-landing-page/index.html
@@ -8,6 +8,10 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/ae1d3a79b9.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="topBar">
@@ -83,5 +87,7 @@
         <input type="download" value="DOWNLOAD NOW" />
       </form>
     </div>
+
+    <footer><i class="fas fa-user fa-3x"></i></footer>
   </body>
 </html>
