added third landing page

--- a/week1/day3/third-landing-page/index.html
+++ b/week1/day3/third-landing-page/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!-- bar -->
-    <div class="topBar">
+    <nav>
       <div class="logo">
         <div class="icon">
           <i class="fas fa-map-marker"></i>
@@ -38,7 +38,7 @@
       <a id="support" href="">Support</a>
 
       <button id="signIn">Sign In</button>
-    </div>
+    </nav>
 
     <!-- title -->
     <div class="title">
