--- a/week1/day3/third-landing-page/index.html
+++ b/week1/day3/third-landing-page/index.html
@@ -19,25 +19,30 @@
       <div class="logo">
         <div class="icon">
           <i class="fas fa-map-marker"></i>
-        <i class="fas fa-phone-alt"></i>
+          <i class="fas fa-phone-alt"></i>
         </div>
         <h1>Call<span>Rail</span></h1>
       </div>
 
-      <ul>
+      <ul class="left">
         <li><a href="">Features</a></li>
         <li><a class="active" href="">Pricing</a></li>
         <li><a href="">Agencies</a></li>
         <li><a href="">Resources</a></li>
       </ul>
 
-      <button id="search">
-        <i class="fas fa-search"></i>
-      </button>
-      <p id="tel">(877) 893-7615</p>
-      <a id="support" href="">Support</a>
+      <ul class="right">
+        <li>
+          <button id="search">
+            <i class="fas fa-search"></i>
+          </button>
+        </li>
 
-      <button id="signIn">Sign In</button>
+        <li><p id="tel">(877) 893-7615</p></li>
+        <li><a id="support" href="">Support</a></li>
+
+        <li><button id="signIn">Sign In</button></li>
+      </ul>
     </nav>
 
     <!-- title -->
