--- a/week1/day3/third-landing-page/index.html
+++ b/week1/day3/third-landing-page/index.html
@@ -155,6 +155,9 @@
       </div>
     </div>
     <!-- chat -->
-    <div class="chat"></div>
+    <div class="chat">
+      <i class="fas fa-comment-dots"></i>
+      <p>Questions about CallRail?</p>
+    </div>
   </body>
 </html>
