--- a/week2/day2/index.html
+++ b/week2/day2/index.html
@@ -12,6 +12,6 @@
     <body>
         
         
-        <script src="main.js" async defer></script>
+        <script src="main3.js" async defer></script>
     </body>
 </html>
