--- a/week2/day3/index.html
+++ b/week2/day3/index.html
@@ -10,6 +10,6 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <script src="exercises.js" async defer></script>
+    <script src="daily-challenge.js" async defer></script>
   </body>
 </html>
