--- a/week1/day3/cv/index.html
+++ b/week1/day3/cv/index.html
@@ -155,13 +155,22 @@
           <h1>EDUCATION</h1>
           <hr />
           <br />
-          <p>Hunan Normal University Chinese And Trading Studies 2006</p>
+          <p id="year">湖南师范大学 | 2006</p>
+
+          <p id="en">Hunan Normal University</p>
+          <p id="details">Chinese Language And Trading Studies</p>
           <br />
-          <p>湖南师范大学 Hunan University Chinese Studies 2005 湖南大学</p>
+          <p id="year">湖南大学 | 2005</p>
+
+          <p id="en">Hunan University Chinese Studies</p>
           <br />
-          <p>Guangxi University Chinese Studies 2004 广西大学</p>
+          <p id="year">广西大学 | 2004</p>
+
+          <p id="en">Guangxi University Chinese Studies</p>
           <br />
-          <p>Yuxi Normal University 2004 玉溪师范大学</p>
+          <p id="year">玉溪师范大学 | 2004</p>
+
+          <p id="en">Yuxi Normal University</p>
         </div>
 
         <!-- LANGUAGES -->
