--- a/week2/day4/index.html
+++ b/week2/day4/index.html
@@ -9,6 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <script src="daily-challenge.js" async defer></script>
+    <script src="exercises.js" async defer></script>
   </body>
 </html>
