--- a/week1/day4/landing2.html
+++ b/week1/day4/landing2.html
@@ -38,7 +38,9 @@
       <!-- nav -->
       <nav class="navbar navbar-expand-lg navbar-dark bg-transparent p-5">
         <div class="container">
-          <a class="navbar-brand" href="#">INTENSE</a>
+          <a class="navbar-brand" href="#"
+            ><h2>INTENSE <span class="text-success h5">job search</span></h2></a
+          >
           <button
             class="navbar-toggler"
             type="button"
@@ -51,28 +53,42 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav ms-auto mb-1 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
+
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#"
-                  >FEATURES</a
+                  >Find a job</a
                 >
               </li>
+
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#"
-                  >PRICING</a
+                  >Post a job</a
                 >
               </li>
+
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#"
-                  >REVIEWS</a
+                  >Pages</a
                 >
               </li>
+
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Blog</a>
+              </li>
+
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#"
-                  >CONTACT</a
+                  >Login</a
+                >
+              </li>
+              <p class="text-white">or</p>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Register</a
                 >
               </li>
             </ul>
@@ -110,51 +126,60 @@
     </div>
 
     <!-- content -->
-    <div class="container-fluid p-5" style="background-color: greenyellow">
+    <div class="container-fluid p-4 pt-5 text-white bg-success text-center">
       <div class="row">
-        <div class="col-sm-2 ">
+        <div class="col-sm-2">
           <i class="fas fa-mobile-alt fa-3x"></i>
-          <h4 class="text-sm-start my-4">Mobile Optimized</h4>
+          <h5 class="my-4">Mobile Optimized</h5>
           <p>Lorem</p>
-
-          <hr />
+          <div class="container d-flex justify-content-center">
+            <hr style="width: 30px" />
+          </div>
         </div>
 
-        <div class="col-sm-2 ">
+        <div class="col-sm-2">
           <i class="fas fa-mobile-alt fa-3x"></i>
-          <h4 class="text-sm-start my-4">Mobile Optimized</h4>
+          <h5 class="my-4">Mobile Optimized</h5>
           <p>Lorem</p>
-
-          <hr />
-        </div>
-        <div class="col-sm-2 ">
-          <i class="fas fa-mobile-alt fa-3x"></i>
-          <h4 class="text-sm-start my-4">Mobile Optimized</h4>
-          <p>Lorem</p>
-
-          <hr />
-        </div>
-        <div class="col-sm-2 ">
-          <i class="fas fa-mobile-alt fa-3x"></i>
-          <h4 class="text-sm-start my-4">Mobile Optimized</h4>
-          <p>Lorem</p>
-
-          <hr />
+          <div class="container d-flex justify-content-center">
+            <hr style="width: 30px" />
+          </div>
         </div>
 
-        <div class="col-sm-2 ">
+        <div class="col-sm-2">
+          <i class="fas fa-mobile-alt fa-3x"></i>
+          <h5 class="my-4">Mobile Optimized</h5>
+          <p>Lorem</p>
+          <div class="container d-flex justify-content-center">
+            <hr style="width: 30px" />
+          </div>
+        </div>
+
+        <div class="col-sm-2">
+          <i class="fas fa-mobile-alt fa-3x"></i>
+          <h5 class="my-4">Mobile Optimized</h5>
+          <p>Lorem</p>
+          <div class="container d-flex justify-content-center">
+            <hr style="width: 30px" />
+          </div>
+        </div>
+
+        <div class="col-sm-2">
           <i class="far fa-folder-open fa-3x"></i>
-          <h4 class="text-sm-start my-4">Mobile Optimized</h4>
+          <h5 class="my-4">Mobile Optimized</h5>
           <p>Lorem</p>
-
-          <hr />
+          <div class="container d-flex justify-content-center">
+            <hr style="width: 30px" />
+          </div>
         </div>
-        <div class="col-sm-2 ">
-          <i class="far fa-lightbulb fa-3x"></i>
-          <h4 class="text-sm-start my-4">Mobile Optimized</h4>
-          <p>Lorem</p>
 
-          <hr />
+        <div class="col-sm-2">
+          <i class="far fa-lightbulb fa-3x"></i>
+          <h5 class="my-4">Mobile Optimized</h5>
+          <p>Lorem</p>
+          <div class="container d-flex justify-content-center">
+            <hr style="width: 30px" />
+          </div>
         </div>
       </div>
     </div>
