--- a/week1/day4/landing2.html
+++ b/week1/day4/landing2.html
@@ -54,135 +54,282 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-1 mb-lg-0">
-              <li class="nav-item">
+              <li class="nav-item mx-3">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
 
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"
+              <li class="nav-item mx-3">
+                <a
+                  class="nav-link"
+                  aria-current="page"
+                  href="#"
+                  style="width: 90px"
                   >Find a job</a
                 >
               </li>
 
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"
+              <li class="nav-item mx-3">
+                <a
+                  class="nav-link"
+                  aria-current="page"
+                  href="#"
+                  style="width: 90px"
                   >Post a job</a
                 >
               </li>
 
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"
-                  >Pages</a
-                >
+              <li class="nav-item mx-3">
+                <a class="nav-link" aria-current="page" href="#">Pages</a>
               </li>
 
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Blog</a>
+              <li class="nav-item mx-3">
+                <a class="nav-link" aria-current="page" href="#">Blog</a>
               </li>
 
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"
-                  >Login</a
-                >
+              <li class="nav-item mx-3">
+                <a class="nav-link" aria-current="page" href="#">Login</a>
               </li>
-              <p class="text-white">or</p>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"
-                  >Register</a
-                >
+              <p class="pt-2" style="color: gray">or</p>
+              <li class="nav-item mx-3">
+                <a class="nav-link" aria-current="page" href="#">Register</a>
               </li>
             </ul>
-
-            <!-- <form class="d-flex">
-              <input
-                class="form-control me-2"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-              />
-              <button class="btn btn-outline-success" type="submit">
-                Search
-              </button>
-            </form> -->
           </div>
         </div>
       </nav>
 
       <!-- jumbotron -->
       <div class="d-flex justify-content-center pb-5">
-        <div class="jumbotron bg-transparent w-75 text-center">
-          <h1 class="display-4 text-light mt-5 mb-5">
-            <b> Build Your Future </b>
-          </h1>
+        <div class="text-white sjumbotron bg-transparent w-75 text-center">
+          <h1 class="display-4 text-light mt-5 mb-5">Build Your Future</h1>
+          <p>
+            We offer <span class="text-success">2,989</span> job vacancies right
+            now
+          </p>
 
-          <a class="btn btn-primary btn-lg me-1" href="#" role="button"
-            >Get Theme Now</a
-          >
-          <a class="btn btn-outline-light btn-lg" href="#" role="button"
-            >See Features</a
-          >
+          <div class="container">
+            <form action="#" class="row justify-content-center">
+              <input
+                type="search"
+                class="form-search m-1 p-2"
+                style="width: 280px"
+                placeholder="Job title or Skill"
+              />
+              <select class="form-select m-1 p-2" style="width: 200px">
+                <option selected>City or State</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+              </select>
+              <a
+                class="btn btn-success m-1 p-2"
+                href="#"
+                role="button"
+                style="width: 160px"
+                >Find a job</a
+              >
+            </form>
+          </div>
         </div>
       </div>
     </div>
 
-    <!-- content -->
-    <div class="container-fluid p-4 pt-5 text-white bg-success text-center">
+    <!-- bottom header -->
+    <div class="p-4 text-white bg-success text-center">
       <div class="row">
-        <div class="col-sm-2">
-          <i class="fas fa-mobile-alt fa-3x"></i>
-          <h5 class="my-4">Mobile Optimized</h5>
-          <p>Lorem</p>
+        <div class="col-6 col-sm-2">
+          <i class="fas fa-wrench fa-3x"></i>
+          <p class="pt-3">Title</p>
           <div class="container d-flex justify-content-center">
             <hr style="width: 30px" />
           </div>
         </div>
 
-        <div class="col-sm-2">
-          <i class="fas fa-mobile-alt fa-3x"></i>
-          <h5 class="my-4">Mobile Optimized</h5>
-          <p>Lorem</p>
+        <div class="col-6 col-sm-2">
+          <i class="fas fa-wrench fa-3x"></i>
+          <p class="pt-3">Title</p>
           <div class="container d-flex justify-content-center">
             <hr style="width: 30px" />
           </div>
         </div>
 
-        <div class="col-sm-2">
-          <i class="fas fa-mobile-alt fa-3x"></i>
-          <h5 class="my-4">Mobile Optimized</h5>
-          <p>Lorem</p>
+        <div class="col-6 col-sm-2">
+          <i class="fas fa-wrench fa-3x"></i>
+          <p class="pt-3">Title</p>
           <div class="container d-flex justify-content-center">
             <hr style="width: 30px" />
           </div>
         </div>
 
-        <div class="col-sm-2">
-          <i class="fas fa-mobile-alt fa-3x"></i>
-          <h5 class="my-4">Mobile Optimized</h5>
-          <p>Lorem</p>
+        <div class="col-6 col-sm-2">
+          <i class="fas fa-wrench fa-3x"></i>
+          <p class="pt-3">Title</p>
           <div class="container d-flex justify-content-center">
             <hr style="width: 30px" />
           </div>
         </div>
 
-        <div class="col-sm-2">
-          <i class="far fa-folder-open fa-3x"></i>
-          <h5 class="my-4">Mobile Optimized</h5>
-          <p>Lorem</p>
+        <div class="col-6 col-sm-2">
+          <i class="fas fa-wrench fa-3x"></i>
+          <p class="pt-3">Title</p>
           <div class="container d-flex justify-content-center">
             <hr style="width: 30px" />
           </div>
         </div>
 
-        <div class="col-sm-2">
-          <i class="far fa-lightbulb fa-3x"></i>
-          <h5 class="my-4">Mobile Optimized</h5>
-          <p>Lorem</p>
+        <div class="col-6 col-sm-2">
+          <i class="fas fa-wrench fa-3x"></i>
+          <p class="pt-3">Title</p>
           <div class="container d-flex justify-content-center">
             <hr style="width: 30px" />
           </div>
         </div>
       </div>
     </div>
+
+    <!-- latest jobs -->
+    <div class="container text-center px-2" style="font-size: 0.8em">
+      <h1 class="mt-5">Latest Jobs</h1>
+      <div class="container d-flex justify-content-center">
+        <hr style="width: 30px" />
+      </div>
+
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col"></th>
+            <th scope="col">Date</th>
+            <th scope="col">Company</th>
+            <th scope="col">Job Position</th>
+            <th scope="col">City</th>
+            <th scope="col">Salary</th>
+            <th scope="col">Employment</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">
+              <i class="col fas fa-wrench"></i>
+            </th>
+            <td>some date</td>
+            <td>
+              <i class="col fas fa-wrench fa-2x"></i>
+            </td>
+            <td class="text-success">some name</td>
+            <td>some name</td>
+            <td>value</td>
+            <td>some name</td>
+          </tr>
+          <tr>
+            <th scope="row">
+              <i class="col fas fa-wrench"></i>
+            </th>
+            <td>some date</td>
+            <td>
+              <i class="col fas fa-wrench fa-2x"></i>
+            </td>
+            <td class="text-success">some name</td>
+            <td>some name</td>
+            <td>value</td>
+            <td>some name</td>
+          </tr>
+          <tr>
+            <th scope="row">
+              <i class="col fas fa-wrench"></i>
+            </th>
+            <td>some date</td>
+            <td>
+              <i class="col fas fa-wrench fa-2x"></i>
+            </td>
+            <td class="text-success">some name</td>
+            <td>some name</td>
+            <td>value</td>
+            <td>some name</td>
+          </tr>
+          <tr>
+            <th scope="row">
+              <i class="col fas fa-wrench"></i>
+            </th>
+            <td>some date</td>
+            <td>
+              <i class="col fas fa-wrench fa-2x"></i>
+            </td>
+            <td class="text-success">some name</td>
+            <td>some name</td>
+            <td>value</td>
+            <td>some name</td>
+          </tr>
+          <tr>
+            <th scope="row">
+              <i class="col fas fa-wrench"></i>
+            </th>
+            <td>some date</td>
+            <td>
+              <i class="col fas fa-wrench fa-2x"></i>
+            </td>
+            <td class="text-success">some name</td>
+            <td>some name</td>
+            <td>value</td>
+            <td>some name</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <a
+        class="btn btn-success my-5 p-2"
+        href="#"
+        role="button"
+        style="width: 160px"
+        >VIEW ALL</a
+      >
+    </div>
+
+    <!-- why people contact us -->
+    <div class="py-2" style="background-color: lightgray">
+      <h1 class="text-center">Why People Contant Us</h1>
+      <div class="container d-flex justify-content-center">
+        <hr style="width: 30px" />
+      </div>
+
+      <div class="container my-5 px-3">
+        <div class="row justify-content-center">
+          <div class="col-lg-3 col-sm-6 m-3">
+            <div class="row">
+              <i class="col-1 fas fa-wrench text-success"></i>
+              <h6 class="col">DEMANDED VACANCIES</h6>
+            </div>
+            <p style="font-size: 0.8em">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid,
+              dolorum.
+            </p>
+          </div>
+
+          <div class="col-lg-3 col-sm-6 m-3">
+            <div class="row">
+              <i class="col-1 fas fa-wrench text-success"></i>
+              <h6 class="col">DEMANDED VACANCIES</h6>
+            </div>
+            <p style="font-size: 0.8em">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid,
+              dolorum.
+            </p>
+          </div>
+
+          <div class="col-lg-3 col-sm-6 m-3">
+            <div class="row">
+              <i class="col-1 fas fa-wrench text-success"></i>
+              <h6 class="col">EMPLOYMENT BLOG</h6>
+            </div>
+            <p style="font-size: 0.8em">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid,
+              dolorum.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- </div> -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
