--- a/week1/day3/cv/index.html
+++ b/week1/day3/cv/index.html
@@ -25,8 +25,8 @@
       <div class="pic"></div>
       <div class="title">
         <h1>TOMER NOY</h1>
-        <!-- <br /> -->
-        <p><span>Location</span> Petach Tikva, Israel</p>
+        <h4>Full Stack Developer</h4>
+        <p>Petach Tikva, Israel</p>
       </div>
       <!-- <div class="stack">
         <ul>
