--- a/week1/portfolio/index.html
+++ b/week1/portfolio/index.html
@@ -26,7 +26,7 @@
     <title>landing</title>
   </head>
   <body>
-    <!-- <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">Home</a>
         <button
@@ -60,7 +60,7 @@
           </ul>
         </div>
       </div>
-    </nav> -->
+    </nav>
     <header>
       <div id="overlay"></div>
       <div class="jumbotron">
@@ -74,13 +74,13 @@
     </header>
 
     <div class="container text-center">
-      
+      <!-- about-me -->
       <div class="about-me">
         <h1 class="my-5">About Me</h1>
 
-        <div class="row">
-          <img id="about-left-box" class="col" src="images/face1.jpg" alt="" />
-          <div id="about-right-box" class="col text-start">
+        <div class="row m-5">
+          <img id="about-left-box" class="" src="images/face1.jpg" alt="" />
+          <div id="about-right-box" class="col text-start my-4">
             <h3>Tomer Noy</h3>
 
             <p>
@@ -91,25 +91,126 @@
           </div>
         </div>
       </div>
+      <!-- portfolio -->
+      <div class="portfolio">
+        <h1 class="m-5">Portfolio</h1>
 
-      <div class="about-me">
-        <h1 class="my-5">About Me</h1>
+        <div class="row mx-5 my-3">
+          <img src="images/portfolio/port13.png" class="col-md-4 my-2" alt="" />
+          <img src="images/portfolio/port13.png" class="col-md-4 my-2" alt="" />
+          <img src="images/portfolio/port13.png" class="col-md-4 my-2" alt="" />
+        </div>
+        <div class="row mx-5 my-3">
+          <img src="images/portfolio/port13.png" class="col-md-4 my-2" alt="" />
+          <img src="images/portfolio/port13.png" class="col-md-4 my-2" alt="" />
+          <img src="images/portfolio/port13.png" class="col-md-4 my-2" alt="" />
+        </div>
+      </div>
+      <!-- blog -->
+      <div class="blog">
+        <h1 class="m-5">Blog</h1>
 
-        <div class="row">
-          <img id="about-left-box" class="col" src="images/face1.jpg" alt="" />
-          <div id="about-right-box" class="col text-start">
-            <h3>Tomer Noy</h3>
+        <div class="row mx-5 my-3">
+          <div class="card col m-2 p-0 shadow">
+            <img src="images/blog/polit.jpg" class="card-img-top" alt="..." />
+            <div class="card-body text-start">
+              <h5 class="card-title">Post title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
 
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio,
-              magnam vitae quibusdam dolorem saepe necessitatibus adipisci.
-              Optio provident saepe iure?
-            </p>
+            <div class="card-footer text-start">
+              <a href="#" class="card-link">Read More</a>
+            </div>
+          </div>
+          <div class="card col m-2 p-0 shadow">
+            <img src="images/blog/polit.jpg" class="card-img-top" alt="..." />
+            <div class="card-body text-start">
+              <h5 class="card-title">Post title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+
+            <div class="card-footer text-start">
+              <a href="#" class="card-link">Read More</a>
+            </div>
+          </div>
+          <div class="card col m-2 p-0 shadow">
+            <img src="images/blog/polit.jpg" class="card-img-top" alt="..." />
+            <div class="card-body text-start">
+              <h5 class="card-title">Post title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+
+            <div class="card-footer text-start">
+              <a href="#" class="card-link">Read More</a>
+            </div>
           </div>
         </div>
       </div>
 
+      <!-- our team -->
+      <div class="our-team m-5">
+        <h1 class="m-5">Our Team</h1>
+        <div class="justify-content-around row">
+          <div class="figure col">
+            <img class="" src="images/face1.jpg" alt="" />
+            <figcaption class="figure-caption text-start">name</figcaption>
+          </div>
+          <div class="figure col">
+            <img class="" src="images/face2.jpg" alt="" />
+            <figcaption class="figure-caption text-start">name</figcaption>
+          </div>
+          <div class="figure col">
+            <img class="" src="images/face3.jpg" alt="" />
+            <figcaption class="figure-caption text-start">name</figcaption>
+          </div>
+          <div class="figure col">
+            <img class="" src="images/face1.jpg" alt="" />
+            <figcaption class="figure-caption text-start">name</figcaption>
+          </div>
+        </div>
+      </div>
+    </div>
 
+    <!-- form -->
+    <div class="container">
+      <hr />
+      <div class="row">
+        <div class="col-4 p-5">
+          <h1>Get In Touch</h1>
+          <p>some icons</p>
+        </div>
+        <div class="col">
+          <form class="m-5">
+            <div class="mb-3">
+              <input
+                type="text"
+                class="form-control"
+                id="name"
+                placeholder="Your Name"
+              />
+            </div>
+            <div class="mb-3">
+              <input
+                type="email"
+                class="form-control"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+                placeholder="Your Email"
+              />
+            </div>
+            <button type="submit" class="btn">Send</button>
+          </form>
+        </div>
+      </div>
     </div>
 
     <script
