--- a/week3/day4/mini-proj2/index.html
+++ b/week3/day4/mini-proj2/index.html
@@ -9,44 +9,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="boxes">
-      <div class="A">
-        <h1>A</h1>
-        <p>boom</p>
-      </div>
-      <div class="S">
-        <h1>S</h1>
-        <p>clap</p>
-      </div>
-      <div class="D">
-        <h1>D</h1>
-        <p>hihat</p>
-      </div>
-      <div class="F">
-        <h1>F</h1>
-        <p>kick</p>
-      </div>
-      <div class="G">
-        <h1>G</h1>
-        <p>openhat</p>
-      </div>
-      <div class="H">
-        <h1>H</h1>
-        <p>ride</p>
-      </div>
-      <div class="J">
-        <h1>J</h1>
-        <p>snare</p>
-      </div>
-      <div class="K">
-        <h1>K</h1>
-        <p>tink</p>
-      </div>
-      <div class="L">
-        <h1>L</h1>
-        <p>tom</p>
-      </div>
-    </div>
+    <div class="boxes"></div>
     <script src="main.js" async defer></script>
   </body>
 </html>
