--- a/week1/portfolio-new/index.html
+++ b/week1/portfolio-new/index.html
@@ -65,9 +65,7 @@
           <img src="img/kapnroni.png" alt="" />
           <div class="project__content">
             <h3 class="">Kap & Roni</h3>
-            <p>
-              Snakes and ladders type of game, based on response speed
-            </p>
+            <p>Snakes and ladders type of game, based on response speed</p>
             <h5>Flutter</h5>
           </div>
         </div>
@@ -105,15 +103,10 @@
         </p>
       </div>
 
-      <img
-        src="img/me.jpg"
-        alt="Jane leaning against a bus"
-        class="about-me__img"
-      />
+      <img src="img/me.jpg" class="about-me__img" />
     </section>
 
     <!-- Contact -->
-
     <section class="contact" id="contact">
       <h2 class="section__title section__title--contact">Contact</h2>
       <div class="form">
@@ -143,23 +136,13 @@
       >
       <ul class="social-list">
         <li class="social-list__item">
-          <a class="social-list__link" href="https://codepen.io">
-            <i class="fab fa-codepen"></i>
+          <a class="social-list__link" href="https://github.com/TomerNoy">
+            <i class="fab fa-github fa-lg"></i>
           </a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link" href="http://dribbble.com">
-            <i class="fab fa-dribbble"></i>
-          </a>
-        </li>
-        <li class="social-list__item">
-          <a class="social-list__link" href="https://twitter.com">
-            <i class="fab fa-twitter"></i>
-          </a>
-        </li>
-        <li class="social-list__item">
-          <a class="social-list__link" href="https://github.com">
-            <i class="fab fa-github"></i>
+          <a class="social-list__link" href="https://www.linkedin.com/in/tomer-noy-b09966203/">
+            <i class="fab fa-linkedin fa-lg"></i>
           </a>
         </li>
       </ul>
