--- a/week1/portfolio-new/index.html
+++ b/week1/portfolio-new/index.html
@@ -102,6 +102,13 @@
           aliquip ex ea commodo consequat.
         </p>
       </div>
+      <h3>Main Skills</h3>
+      <ul>
+        <li>HTML | CSS</li>
+        <li>JavaScript</li>
+        <li>Python</li>
+        <li>Flutter</li>
+      </ul>
 
       <img src="img/me.jpg" class="about-me__img" />
     </section>
@@ -141,7 +148,10 @@
           </a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link" href="https://www.linkedin.com/in/tomer-noy-b09966203/">
+          <a
+            class="social-list__link"
+            href="https://www.linkedin.com/in/tomer-noy-b09966203/"
+          >
             <i class="fab fa-linkedin fa-lg"></i>
           </a>
         </li>
